[package]
name = "match_bytes"
version = "0.1.0"
edition = "2021"
description = "A language extension for matching byte patterns in slices of bytes"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "*"
syn = {version = "*", features = ["full"]} 
proc-macro2 = "*"

[lib]
proc-macro = true
